kubernetes/apps/kyverno/policies/tests/07-disallow-untrusted-images/kyverno-test.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: disallow-untrusted-images-test
policies:
  - ../../app/07-disallow-untrusted-images.yaml
resources:
  - fixtures/good-pod.yaml
  - fixtures/bad-pod.yaml
results:
  - policy: disallow-untrusted-images
    rule: check-image-denylist
    resources: [good-pod]
    kind: Pod
    result: pass
  - policy: disallow-untrusted-images
    rule: check-image-denylist
    resources: [bad-pod]
    kind: Pod
    result: fail
